--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <meta name="twitter:title" content="23평인테리어비용"/>
 <meta name="twitter:url" content="/"/>
 <meta name="twitter:image" content="https://financial.pstatic.net/insurance/insurance_car.png"/>
+<meta name="google-site-verification" content="IE4WavsHiVEvCOkq7IH8v_w3p5fwUSxwibeOmrGUtP0" />
+<meta name="naver-site-verification" content="524ca595fc1e525caeb8da0a53d923b67d009133" />
 
-
+	
 <meta name="subject" content="23평인테리어비용" />
 <meta name="publisher" content="23평인테리어비용" />
 <meta name="Other Agent" content="23평인테리어비용" />
@@ -605,3 +607,4 @@
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" data-bootloader-hash="qgmbN7Z" async="1" crossorigin="anonymous" data-p=":74" data-btmanifest="1027280358_main" data-c="1"></script>
 </body>
 </html>
+
